# Mandelbrot-Set

./: CMakeLists.txt  readme.md
include/: graphics.h  mandelbrot.h  window.h
src/: graphics.cpp  mandelbrot_main.cpp  mandlebrot.cpp
